--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,9 @@ ktor = "2.3.11"
 # https://logback.qos.ch/download.html
 logback = "1.5.6"
 stdx = "1.3.0"
-# https://litote.org/kmongo/quick-start/
-kmongo = "5.1.0"
+# https://litote.org/kmongo/quick-start/ => DEPRECATED
+# https://www.mongodb.com/developer/products/mongodb/getting-started-kotlin-driver/
+mongodb = "4.10.1"
 # https://github.com/oshai/kotlin-logging
 klogger = "5.1.0"
 # https://github.com/05nelsonm/kmp-process
@@ -30,9 +31,8 @@ stdx-envconf = { group = "dev.schlaubi", name = "stdx-envconf" }
 stdx-logging = { group = "dev.schlaubi", name = "stdx-logging" }
 stdx-coroutines = { group = "dev.schlaubi", name = "stdx-coroutines" }
 
-kmongo = { group = "org.litote.kmongo", name = "kmongo-coroutine", version.ref = "kmongo" }
+mongodb = { group = "org.mongodb", name = "mongodb-driver-kotlin-coroutine", version.ref = "mongodb" }
 klogger = { group = "io.github.oshai", name = "kotlin-logging-jvm", version.ref = "klogger" }
-kmpProcess = { group = "io.matthewnelson.kmp-process", name = "process", version.ref = "kmp-process" }
 
 slf4jSimple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j"}
 
@@ -41,3 +41,4 @@ kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 buildConfig = { id = "com.github.gmazzo.buildconfig", version = "5.3.5" }
 ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
+reckon = { id = "org.ajoberstar.reckon", version = "0.18.3" }
