--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,12 @@ stdx = "1.3.0"
 # https://www.mongodb.com/developer/products/mongodb/getting-started-kotlin-driver/
 mongodb = "4.10.1"
 # https://github.com/oshai/kotlin-logging
-klogger = "5.1.0"
+klogger = "7.0.0"
 # https://github.com/05nelsonm/kmp-process
 kmp-process = "0.1.0-alpha03"
 # https://www.slf4j.org/download.html
 slf4j = "2.0.13"
+koin = "3.5.6"
 
 [libraries]
 ktor-bom = { group = "io.ktor", name = "ktor-bom", version.ref = "ktor" }
@@ -40,6 +41,10 @@ slf4jSimple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j
 
 ktor-server-testHost = { group = "io.ktor", name = "ktor-server-test-host" }
 kotlinTest = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
+
+koin-bom = { group = "io.insert-koin", name = "koin-bom", version.ref = "koin" }
+koin-ktor = { group = "io.insert-koin", name = "koin-ktor" }
+koin-logging = { group = "io.insert-koin", name = "koin-logger-slf4j" }
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
