--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ kmp-process = "0.1.0-alpha03"
 # https://www.slf4j.org/download.html
 slf4j = "2.0.13"
 koin = "3.5.6"
+# https://github.com/Kotlin/kotlinx-datetime?tab=readme-ov-file#gradle
+kotlinx-datetime = "0.6.0"
 
 [libraries]
 ktor-bom = { group = "io.ktor", name = "ktor-bom", version.ref = "ktor" }
@@ -31,6 +33,8 @@ stdx-core = { group = "dev.schlaubi", name = "stdx-core" }
 stdx-envconf = { group = "dev.schlaubi", name = "stdx-envconf" }
 stdx-logging = { group = "dev.schlaubi", name = "stdx-logging" }
 stdx-coroutines = { group = "dev.schlaubi", name = "stdx-coroutines" }
+
+kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime"}
 
 klogger = { group = "io.github.oshai", name = "kotlin-logging-jvm", version.ref = "klogger" }
 
