--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ slf4j = "2.0.13"
 koin = "3.5.6"
 # https://github.com/Kotlin/kotlinx-datetime?tab=readme-ov-file#gradle
 kotlinx-datetime = "0.6.0"
+krontab = "2.3.0"
 
 [libraries]
 ktor-bom = { group = "io.ktor", name = "ktor-bom", version.ref = "ktor" }
@@ -35,6 +36,8 @@ stdx-logging = { group = "dev.schlaubi", name = "stdx-logging" }
 stdx-coroutines = { group = "dev.schlaubi", name = "stdx-coroutines" }
 
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime"}
+
+krontab = { group = "dev.inmo", name = "krontab", version.ref = "krontab" }
 
 klogger = { group = "io.github.oshai", name = "kotlin-logging-jvm", version.ref = "klogger" }
 
