google: Added Secret OAuth2 File

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ krontab = "2.3.0"
 ktor-bom = { group = "io.ktor", name = "ktor-bom", version.ref = "ktor" }
 ktor-server-cio = { group = "io.ktor", name = "ktor-server-cio" }
 ktor-server-logging = { group = "io.ktor", name = "ktor-server-call-logging" }
+ktor-server-auth = { group = "io.ktor", name = "ktor-server-auth" }
 ktor-contentnegotiation-server = { group = "io.ktor", name = "ktor-server-content-negotiation" }
 ktor-contentnegotiation-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json" }
 
