gave permission to ghcr.io

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -16,6 +16,9 @@ jobs:
     # Will build the .jar by running the Dockerfile
     runs-on: ubuntu-latest
     name: Server Dockerization
+    permissions:
+      contents: read
+      packages: write
     steps:
 
       - name: Fetch Sources
